Deploying the frontend to AWS.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "^1.124.0",
+    "@aws-cdk/aws-s3": "^1.124.0",
+    "@aws-cdk/aws-s3-deployment": "^1.124.0",
     "@aws-cdk/core": "1.97.0",
     "source-map-support": "^0.5.16"
   }
