--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.127.0",
     "@aws-cdk/aws-iam": "^1.124.0",
     "@aws-cdk/aws-s3": "^1.124.0",
     "@aws-cdk/aws-s3-deployment": "^1.124.0",
