--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-dynamodb": "^1.127.0",
-    "@aws-cdk/aws-iam": "^1.124.0",
-    "@aws-cdk/aws-s3": "^1.124.0",
-    "@aws-cdk/aws-s3-deployment": "^1.124.0",
-    "@aws-cdk/core": "1.97.0",
+    "@aws-cdk/aws-apigateway": "1.127.0",
+    "@aws-cdk/aws-dynamodb": "1.127.0",
+    "@aws-cdk/aws-iam": "1.127.0",
+    "@aws-cdk/aws-s3": "1.127.0",
+    "@aws-cdk/aws-s3-deployment": "1.127.0",
+    "@aws-cdk/core": "1.127.0",
     "source-map-support": "^0.5.16"
   }
 }
