--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.127.0",
-    "@aws-cdk/aws-dynamodb": "1.127.0",
-    "@aws-cdk/aws-iam": "1.127.0",
-    "@aws-cdk/aws-s3": "1.127.0",
-    "@aws-cdk/aws-s3-deployment": "1.127.0",
-    "@aws-cdk/core": "1.127.0",
+    "@aws-cdk/aws-apigateway": "1.129.0",
+    "@aws-cdk/aws-certificatemanager": "1.129.0",
+    "@aws-cdk/aws-cloudfront": "^1.129.0",
+    "@aws-cdk/aws-dynamodb": "1.129.0",
+    "@aws-cdk/aws-iam": "1.129.0",
+    "@aws-cdk/aws-route53": "1.129.0",
+    "@aws-cdk/aws-s3": "1.129.0",
+    "@aws-cdk/aws-s3-deployment": "1.129.0",
+    "@aws-cdk/core": "1.129.0",
     "source-map-support": "^0.5.16"
   }
 }
