--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-cdk/aws-dynamodb": "1.129.0",
     "@aws-cdk/aws-iam": "1.129.0",
     "@aws-cdk/aws-route53": "1.129.0",
+    "@aws-cdk/aws-route53-targets": "^1.129.0",
     "@aws-cdk/aws-s3": "1.129.0",
     "@aws-cdk/aws-s3-deployment": "1.129.0",
     "@aws-cdk/core": "1.129.0",
