--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.js
 !jest.config.js
 *.d.ts
 node_modules
@@ -6,3 +5,7 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+application/frontend/**/*.js
+application/functions/add-item/index.js
+application/functions/get-items/index.js
+application/functions/shared-code/nodejs/*.js
